--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site
-title:              Ibrahim Alper GÖK
-bio:                'Blue team member & Reverse Engineer'
-description:        "Welcome, this blog contains my personal works on DFIR n Reverse Engineering"
+title:              Moon
+bio:                'Minimal, one column jekyll theme.'
+description:        "Moon is a minimal, one column jekyll theme for your blog."
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
-background:         'assets/img/background.jpg'
+background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:                https://ialpergok.com
+url:                https://taylantatli.github.io/Moon
 
 # Jekyll
 permalink:          /:title/
@@ -26,7 +26,7 @@ sass:
   style:            compressed
 
 # Comments
-disqus_shortname:   ialpergok
+disqus_shortname:   taylantatli
 
 # Social
 # if you don't have any of social below, comment the line.
@@ -37,20 +37,20 @@ disqus_shortname:   ialpergok
   #ad-client:
   #ad-slot:
 #bing-verify:
-email:              ialpergok@protonmail.com
-twitter:            i_alpergok
-#facebook:           username
-github-url:         github.com/ialpergok
+#email:
+twitter:            username
+facebook:           username
+github-url:         username
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 #linkedin:          username
 #xing:              username
-instagram:          i.alpergok
+instagram:          username
 #lastfm:            username
 #tumblr:            username
 #medium:            '@username'
 #pinterest:         username
 #foursquare:        username
-steam:              Sxatchun
+steam:              username
 #dribbble:          username
 #youtube:           username
 #youtube-channel:   channel
