--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@ description:        "Welcome, this blog contains my DFIR and Reverse Engineering
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
-background:         'assets/img/placeholder-big.jpg'
-tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
+background:         'assets/img/background.jpg'
+tiled_bg:           true   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:                ialpergok.com
+url:                https://taylantatli.github.io/Moon
 
 # Jekyll
 permalink:          /:title/
