--- a/_config.yml
+++ b/_config.yml
@@ -37,12 +37,12 @@ disqus_shortname:   ialpergok
   #ad-client:
   #ad-slot:
 #bing-verify:
-#email:
+email:              i.alpergok@protonmail.com
 twitter:            i_alpergok
 #facebook:           username
 github-url:         github.com/ialpergok
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
-#linkedin:          username
+linkedin:           www.linkedin.com/in/ialpergok
 #xing:              username
 instagram:          i.alpergok
 #lastfm:            username
