--- a/_config.yml
+++ b/_config.yml
@@ -40,9 +40,9 @@ disqus_shortname:   ialpergok
 email:              i.alpergok@protonmail.com
 twitter:            i_alpergok
 #facebook:           username
-github-url:         github.com/ialpergok
+github-url:         ialpergok
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
-linkedin:           www.linkedin.com/in/ialpergok
+linkedin:           ialpergok
 #xing:              username
 instagram:          i.alpergok
 #lastfm:            username
